--- a/ConnectTheDots.Web/index.html
+++ b/ConnectTheDots.Web/index.html
@@ -7,6 +7,25 @@
 <body>
 	<div id="app"></div>
 	<script src="ui.js"></script>
-	<script src="init.js"></script>
+	<script>
+		'use strict';
+
+		const node = document.getElementById('app');
+
+		// Update the second argument to `Elm.Main.embed` with your selected API. See
+		// the Intro section of the technical assessment documentation for more
+		// information:
+		// https://technical-assessment.konicaminoltamarketplace.com
+		const app = Elm.Main.embed(node, {
+			api: 'Client',
+			hostname: '',
+		});
+
+		app.ports.startTimer.subscribe((int) => {
+			setTimeout(() => {
+				app.ports.timeout.send(int);
+			}, 10000);
+		});
+	</script>
 </body>
 </html>
